--- a/Clients/Views/Shared/_Layout.cshtml
+++ b/Clients/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Клиенты", "Clients", "Home")</li>
                 </ul>
             </div>
         </div>
