--- a/Clients/Views/Home/Edit.cshtml
+++ b/Clients/Views/Home/Edit.cshtml
@@ -474,7 +474,7 @@
         NationalityID: '@ViewBag.Clients.NationalityID',
         DisabilityID: '@ViewBag.Clients.DisabilityID',
         Pensioner: '@ViewBag.Clients.Pensioner',
-        Position:'@ViewBag.Clients.Position'
+        Position:'@ViewBag.Clients.Position',
         Income: '@ViewBag.Clients.Income',
         Reservist:'@ViewBag.Clients.Reservist'
     });
