--- a/Clients/Views/Shared/_Layout.cshtml
+++ b/Clients/Views/Shared/_Layout.cshtml
@@ -17,11 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Имя приложения", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Клиенты", "Clients", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Клиенты", "Clients", "Home")</li>
+                    <li>@Html.ActionLink("Добавить клиента", "index", "Home")</li>
                 </ul>
             </div>
         </div>
