--- a/Clients/Views/Home/Clients.cshtml
+++ b/Clients/Views/Home/Clients.cshtml
@@ -32,7 +32,7 @@
                 <td><p><a href="/Home/Edit/@c.ClientID">Редактировать</a></p></td>
                 <td><p><a href="/Home/Delete/@c.ClientID">Удалить</a></p></td>
                 <td><p><a href="/Bank/DepositList/@c.ClientID">Депозиты</a></p></td>
-                <td><p><a href="/Bank/Credit/@c.ClientID">Кредиты</a></p></td>
+                <td><p><a href="/Bank/CreditsList/@c.ClientID">Кредиты</a></p></td>
             </tr>
             }
         </table>
