--- a/Clients/Views/Bank/CreditsList.cshtml
+++ b/Clients/Views/Bank/CreditsList.cshtml
@@ -47,7 +47,7 @@
                         <td><p>Закрытый<p></td>
                     }
                     <td><p>@c.CreditName</p></td>
-                    <td><p>@c.CreditNumber</p></td>
+                    <td><a href="/Bank/Credit?creditNumber=@c.CreditNumber">@c.CreditNumber</a></td>
                     <td><p>@c.Percent</p></td>
                     <td><p>@c.DateStart</p></td>
                     <td><p>@c.Period месяцев</p></td>
